# ChangeLog for media-plugins/swh-plugins
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/swh-plugins/ChangeLog,v 1.7 2003/02/12 07:19:31 vapier Exp $

*swh-plugins-0.3.6 (24 Jan 2003)

  24 Jan 2003; Tobias Eichert <viz@gentoo.org> swh-plugins-0.3.6.ebuild :

  Version bump.
  Lots of bugfixes and some new effects.

*swh-plugins-0.3.3 (24 Dec 2002)

  23 Jan 2003; Joachim Blaabjerg <styx@gentoo.org> swh-plugins-0.3.3.ebuild :

  According to Paul Thompson in bug #14271, these plugins work without ALSA
  installed, so I made the alsa-driver dependency alsa USE flag  conditional.

  24 Dec 2002; Tobias Eichert <viz@gentoo.org> swh-plugins-0.3.3.ebuild
  files/digest-swh-plugins-0.3.3 :

  Version bump, thanks to ashura666@mac.com for pointing me to
  this update; closes bug #12296.

*swh-plugins-0.3.0 (30 Nov 2002)

  30 Nov 2002; Seemant Kulleen <seemant@gentoo.org> swh-plugins-0.3.0.ebuild
  files/digest-swh-plugins-0.3.0 :

  Version bump, thanks to: tobias@databoogie.net (Tobias Eichert) in bug
  #11413.

*swh-plugins-0.2.8 (07 Nov 2002)

  07 Nov 2002; Seemant Kulleen <seemant@gentoo.org> swh-plugins-0.2.8.ebuild
  files/swh-plugin-quickfix.patch files/digest-swh-plugins-0.2.8 ChangeLog :

  New package for LADSPA sound effects plugins.  Submitted by Rogi, but this
  package is taken from the same bug #9458, the submission from
  tobias@databoogie.net (Tobias Eichert)